Small refactor to fix bug of not centered text

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,8 +3,11 @@
     color: #444444;
 
 }
+.about-intro-section{
+    text-align: center !important;
+}
+
 #about-intro{
-    text-align: center;
     color: #444444;
     font-weight: 1400;
     font-family: 'Poppins', sans-serif;
@@ -13,8 +16,7 @@
 
 }
 #about-name{
-    text-align: center;
-    color: #2978b5 !important;
+    color: #2978b5;
     font-size: 45pt;
     font-weight: 1200;
     font-family: 'Poppins', sans-serif;
